--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,21 @@
 <a
   href="https://developers.livechatinc.com/blog/angular-dependency-injection-components/"
 >
-  <button class="btn">Great Reference on Testing</button>
+  Great Reference on Testing
 </a>
-<a href="https://angular.io/guide/testing">
-  <button class="btn">Testing Docs</button>
-</a>
+-
+<a href="https://angular.io/guide/testing">Testing Docs</a>
 
-<section class="card">
-  <div class="card-content">
-    <div class="card-title">Filtered Employee team</div>
-    <div>
-      <label for="nameFilter">Name Filter</label>
-      <input
-        id="nameFilter"
-        type="text"
-        autocomplete="off"
-        [formControl]="nameFilter"
-      />
-    </div>
-    <span *ngFor="let e of filteredTeam | async">
-      <pre>{{ e | json }}</pre>
-    </span>
-  </div>
-</section>
+<article>
+  <header>Filtered Employee team</header>
+
+  <label for="nameFilter">Name Filter</label>
+  <input
+    id="nameFilter"
+    type="text"
+    autocomplete="off"
+    [formControl]="nameFilter"
+  />
+
+  <pre *ngFor="let e of filteredTeam | async">{{ e | json }}</pre>
+</article>
